--- a/templates/test.html
+++ b/templates/test.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <h1>This is main heading H1</h1>
+        <h1>This is a main heading H1</h1>
         <p>This is a paragraph p</p>
     </body>
 </html>
